Fix broken design on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -20,3 +20,7 @@
     }
   }
 }
+
+.pager {
+  text-align: right;
+}
